[gd_scene load_steps=34 format=3 uid="uid://gwajo1vct5c8"]

[ext_resource type="Texture2D" uid="uid://b5a7vim45baig" path="res://Dungeon Crawl Stone Soup Full/dungeon/floor/grass/grass_0_new.png" id="1_qma8s"]
[ext_resource type="Texture2D" uid="uid://dq1eqqjo7aqhb" path="res://Dungeon Crawl Stone Soup Full/dungeon/floor/grass/grass_1_new.png" id="2_26255"]
[ext_resource type="Texture2D" uid="uid://c3b727ceyvw7k" path="res://Dungeon Crawl Stone Soup Full/dungeon/floor/grass/grass_2_new.png" id="3_h71gi"]
[ext_resource type="Texture2D" uid="uid://w0ba3majc5ep" path="res://Dungeon Crawl Stone Soup Full/dungeon/gateways/enter_dis.png" id="4_qdbao"]
[ext_resource type="Texture2D" uid="uid://bb8jip1too3ll" path="res://Dungeon Crawl Stone Soup Full/dungeon/altars/altar_makhleb_flame_1.png" id="5_2dt71"]
[ext_resource type="Texture2D" uid="uid://c3lgosir1bm1f" path="res://Dungeon Crawl Stone Soup Full/dungeon/altars/altar_makhleb_flame_2.png" id="6_nnpt5"]
[ext_resource type="Texture2D" uid="uid://b3ix0nbs57u48" path="res://Dungeon Crawl Stone Soup Full/dungeon/altars/altar_makhleb_flame_3.png" id="7_vrhnf"]
[ext_resource type="Texture2D" uid="uid://bq7212f1k17pg" path="res://Dungeon Crawl Stone Soup Full/dungeon/altars/altar_makhleb_flame_4.png" id="8_64ala"]
[ext_resource type="Texture2D" uid="uid://cking6frwsys2" path="res://Dungeon Crawl Stone Soup Full/dungeon/altars/altar_makhleb_flame_5.png" id="9_lvsd0"]
[ext_resource type="Texture2D" uid="uid://cj03yhcj6bus4" path="res://Dungeon Crawl Stone Soup Full/dungeon/altars/altar_makhleb_flame_6.png" id="10_rq2aa"]
[ext_resource type="Texture2D" uid="uid://co8ws4wjpudfm" path="res://Dungeon Crawl Stone Soup Full/dungeon/altars/altar_makhleb_flame_7.png" id="11_alcvw"]
[ext_resource type="Texture2D" uid="uid://ciho6f4o54o0l" path="res://Dungeon Crawl Stone Soup Full/dungeon/altars/altar_makhleb_flame_8.png" id="12_kmm6w"]
[ext_resource type="Script" path="res://Player.gd" id="13_diexu"]
[ext_resource type="Resource" uid="uid://d3f1spm15p626" path="res://Sword.tres" id="14_1m8u4"]
[ext_resource type="Texture2D" uid="uid://dita3t8h07urv" path="res://Dungeon Crawl Stone Soup Full/player/base/deep_elf_male.png" id="14_5h3gn"]
[ext_resource type="Texture2D" uid="uid://cu51x1lo826lr" path="res://Dungeon Crawl Stone Soup Full/item/weapon/katana_1.png" id="16_1uaj8"]
[ext_resource type="Script" path="res://HitBox.gd" id="17_e58rm"]
[ext_resource type="Script" path="res://HurtBox.gd" id="17_px7d3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cp7sy"]
texture = ExtResource("1_qma8s")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5yskb"]
texture = ExtResource("2_26255")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7wc3p"]
texture = ExtResource("3_h71gi")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4uth1"]
texture = ExtResource("4_qdbao")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_23lu4"]
tile_size = Vector2i(32, 32)
sources/3 = SubResource("TileSetAtlasSource_cp7sy")
sources/4 = SubResource("TileSetAtlasSource_5yskb")
sources/5 = SubResource("TileSetAtlasSource_7wc3p")
sources/6 = SubResource("TileSetAtlasSource_4uth1")

[sub_resource type="SpriteFrames" id="SpriteFrames_ijwqv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_2dt71")
}, {
"duration": 1.0,
"texture": ExtResource("6_nnpt5")
}, {
"duration": 1.0,
"texture": ExtResource("7_vrhnf")
}, {
"duration": 1.0,
"texture": ExtResource("8_64ala")
}, {
"duration": 1.0,
"texture": ExtResource("9_lvsd0")
}, {
"duration": 1.0,
"texture": ExtResource("10_rq2aa")
}, {
"duration": 1.0,
"texture": ExtResource("11_alcvw")
}, {
"duration": 1.0,
"texture": ExtResource("12_kmm6w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_uqym8"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	play(\"default\")


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjw3k"]
size = Vector2(22, 30)

[sub_resource type="GDScript" id="GDScript_rj4es"]
resource_name = "WeaponInHand"
script/source = "extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	update_sprite()
	


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func update_sprite():
	var weapon: Weapon = get_parent().weapon
	if weapon == null:
		texture = null
	else:
		texture = weapon.character_image

func _on_player_changed_weapon():
	update_sprite()
	
"

[sub_resource type="GDScript" id="GDScript_3qysm"]
resource_name = "ItemScanner"
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	var items = get_overlapping_areas()
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmy2a"]

[sub_resource type="GDScript" id="GDScript_q71f5"]
resource_name = "Grounditem.gd"
script/source = "@tool
extends Area2D
@export var weapon : Weapon :
	set(new_weapon):
		weapon = new_weapon
		changed_weapon.emit()


signal changed_weapon 
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ma3kf"]
size = Vector2(32, 32)

[sub_resource type="GDScript" id="GDScript_g0yly"]
resource_name = "GroundItemSprite"
script/source = "@tool
extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	update_sprite()
	


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass



func _on_ground_item_changed_weapon():
	update_sprite()
	

func update_sprite():
	var weapon = get_parent().weapon
	if weapon == null:
		texture = null
	else:
		texture = weapon.inventory
	
	
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cb5ct"]

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_23lu4")
format = 2
layer_0/tile_data = PackedInt32Array(131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 1, 3, 0, -65535, 3, 0, -65536, 3, 0, -1, 3, 0, 65535, 3, 0, 0, 3, 0, -22, 3, 0, 65514, 3, 0, 131050, 3, 0, 196586, 3, 0, 262122, 3, 0, 327658, 3, 0, 393194, 3, 0, 458730, 3, 0, 524266, 3, 0, -21, 3, 0, 65515, 3, 0, 131051, 3, 0, 196587, 3, 0, 262123, 3, 0, 327659, 3, 0, 393195, 3, 0, 458731, 3, 0, 524267, 3, 0, -20, 3, 0, 65516, 3, 0, 131052, 3, 0, 196588, 3, 0, 262124, 3, 0, 327660, 3, 0, 393196, 3, 0, 458732, 3, 0, 524268, 3, 0, -19, 3, 0, 65517, 3, 0, 131053, 3, 0, 196589, 3, 0, 262125, 3, 0, 327661, 3, 0, 393197, 3, 0, 458733, 3, 0, 524269, 3, 0, -18, 3, 0, 65518, 3, 0, 131054, 3, 0, 196590, 3, 0, 262126, 3, 0, 327662, 3, 0, 393198, 3, 0, 458734, 3, 0, 524270, 3, 0, -17, 3, 0, 65519, 3, 0, 131055, 3, 0, 196591, 3, 0, 262127, 3, 0, 327663, 3, 0, 393199, 3, 0, 458735, 3, 0, 524271, 3, 0, -16, 3, 0, 65520, 3, 0, 131056, 3, 0, 196592, 3, 0, 262128, 3, 0, 327664, 3, 0, 393200, 3, 0, 458736, 3, 0, 524272, 3, 0, -15, 3, 0, 65521, 3, 0, 131057, 3, 0, 196593, 3, 0, 262129, 3, 0, 327665, 3, 0, 393201, 3, 0, 458737, 3, 0, 524273, 3, 0, -14, 3, 0, 65522, 3, 0, 131058, 3, 0, 196594, 3, 0, 262130, 3, 0, 327666, 3, 0, 393202, 3, 0, 458738, 3, 0, 524274, 3, 0, -13, 3, 0, 65523, 3, 0, 131059, 3, 0, 196595, 3, 0, 262131, 3, 0, 327667, 3, 0, 393203, 3, 0, 458739, 3, 0, 524275, 3, 0, -12, 3, 0, 65524, 3, 0, 131060, 3, 0, 196596, 3, 0, 262132, 3, 0, 327668, 3, 0, 393204, 3, 0, 458740, 3, 0, 524276, 3, 0, -11, 3, 0, 65525, 3, 0, 131061, 3, 0, 196597, 3, 0, 262133, 3, 0, 327669, 3, 0, 393205, 3, 0, 458741, 3, 0, 524277, 3, 0, -10, 3, 0, 65526, 3, 0, 131062, 3, 0, 196598, 3, 0, 262134, 3, 0, 327670, 3, 0, 393206, 3, 0, 458742, 3, 0, 524278, 3, 0, -9, 3, 0, 65527, 3, 0, 131063, 3, 0, 196599, 3, 0, 262135, 3, 0, 327671, 3, 0, 393207, 3, 0, 458743, 3, 0, 524279, 3, 0, -8, 3, 0, 65528, 3, 0, 131064, 3, 0, 196600, 3, 0, 262136, 3, 0, 327672, 3, 0, 393208, 3, 0, 458744, 3, 0, 524280, 3, 0, -7, 3, 0, 65529, 3, 0, 131065, 3, 0, 196601, 3, 0, 262137, 3, 0, 327673, 3, 0, 393209, 3, 0, 458745, 3, 0, 524281, 3, 0, -6, 3, 0, 65530, 3, 0, 131066, 3, 0, 196602, 3, 0, 262138, 3, 0, 327674, 3, 0, 393210, 3, 0, 458746, 3, 0, 524282, 3, 0, -5, 3, 0, 65531, 3, 0, 131067, 3, 0, 196603, 3, 0, 262139, 3, 0, 327675, 3, 0, 393211, 3, 0, 458747, 3, 0, 524283, 3, 0, -4, 3, 0, 65532, 3, 0, 131068, 3, 0, 196604, 3, 0, 262140, 3, 0, 327676, 3, 0, 393212, 3, 0, 458748, 3, 0, 524284, 3, 0, -3, 3, 0, 65533, 3, 0, 131069, 3, 0, 196605, 3, 0, 262141, 3, 0, 327677, 3, 0, 393213, 3, 0, 458749, 3, 0, 524285, 3, 0, -2, 3, 0, 65534, 3, 0, 131070, 3, 0, 196606, 3, 0, 262142, 3, 0, 327678, 3, 0, 393214, 3, 0, 458750, 3, 0, 524286, 3, 0, -65534, 3, 0, 2, 3, 0, 65538, 3, 0, 131074, 3, 0, 196610, 3, 0, 262146, 3, 0, 327682, 3, 0, 393218, 3, 0, 458754, 3, 0, -65533, 3, 0, 3, 3, 0, 65539, 3, 0, 131075, 3, 0, 196611, 3, 0, 262147, 3, 0, 327683, 3, 0, 393219, 3, 0, 458755, 3, 0, -65532, 3, 0, 4, 3, 0, 65540, 3, 0, 131076, 3, 0, 196612, 3, 0, 262148, 3, 0, 327684, 3, 0, 393220, 3, 0, 458756, 3, 0, -65531, 3, 0, 5, 3, 0, 65541, 3, 0, 131077, 3, 0, 196613, 3, 0, 262149, 3, 0, 327685, 3, 0, 393221, 3, 0, 458757, 3, 0, -65530, 3, 0, 6, 3, 0, 65542, 3, 0, 131078, 3, 0, 196614, 3, 0, 262150, 3, 0, 327686, 3, 0, 393222, 3, 0, 458758, 3, 0, -65529, 3, 0, 7, 3, 0, 65543, 3, 0, 131079, 3, 0, 196615, 3, 0, 262151, 3, 0, 327687, 3, 0, 393223, 3, 0, 458759, 3, 0, -65528, 3, 0, 8, 3, 0, 65544, 3, 0, 131080, 3, 0, 196616, 3, 0, 262152, 3, 0, 327688, 3, 0, 393224, 3, 0, 458760, 3, 0, -65527, 3, 0, 9, 3, 0, 65545, 3, 0, 131081, 3, 0, 196617, 3, 0, 262153, 3, 0, 327689, 3, 0, 393225, 3, 0, 458761, 3, 0, -65526, 3, 0, 10, 3, 0, 65546, 3, 0, 131082, 3, 0, 196618, 3, 0, 262154, 3, 0, 327690, 3, 0, 393226, 3, 0, 458762, 3, 0, -65525, 3, 0, 11, 3, 0, 65547, 3, 0, 131083, 3, 0, 196619, 3, 0, 262155, 3, 0, 327691, 3, 0, 393227, 3, 0, 458763, 3, 0, -65524, 3, 0, 12, 3, 0, 65548, 3, 0, 131084, 3, 0, 196620, 3, 0, 262156, 3, 0, 327692, 3, 0, 393228, 3, 0, 458764, 3, 0, -65523, 3, 0, 13, 3, 0, 65549, 3, 0, 131085, 3, 0, 196621, 3, 0, 262157, 3, 0, 327693, 3, 0, 393229, 3, 0, 458765, 3, 0, -65522, 3, 0, 14, 3, 0, 65550, 3, 0, 131086, 3, 0, 196622, 3, 0, 262158, 3, 0, 327694, 3, 0, 393230, 3, 0, 458766, 3, 0, -65521, 3, 0, 15, 3, 0, 65551, 3, 0, 131087, 3, 0, 196623, 3, 0, 262159, 3, 0, 327695, 3, 0, 393231, 3, 0, 458767, 3, 0, -65520, 3, 0, 16, 3, 0, 65552, 3, 0, 131088, 3, 0, 196624, 3, 0, 262160, 3, 0, 327696, 3, 0, 393232, 3, 0, 458768, 3, 0, -65519, 3, 0, 17, 3, 0, 65553, 3, 0, 131089, 3, 0, 196625, 3, 0, 262161, 3, 0, 327697, 3, 0, 393233, 3, 0, 458769, 3, 0, -65518, 3, 0, 18, 3, 0, 65554, 3, 0, 131090, 3, 0, 196626, 3, 0, 262162, 3, 0, 327698, 3, 0, 393234, 3, 0, 458770, 3, 0, -65517, 3, 0, 19, 3, 0, 65555, 3, 0, 131091, 3, 0, 196627, 3, 0, 262163, 3, 0, 327699, 3, 0, 393235, 3, 0, 458771, 3, 0, -65516, 3, 0, 20, 3, 0, 65556, 3, 0, 131092, 3, 0, 196628, 3, 0, 262164, 3, 0, 327700, 3, 0, 393236, 3, 0, 458772, 3, 0, -65515, 3, 0, 21, 3, 0, 65557, 3, 0, 131093, 3, 0, 196629, 3, 0, 262165, 3, 0, 327701, 3, 0, 393237, 3, 0, 458773, 3, 0, -65514, 3, 0, 22, 3, 0, 65558, 3, 0, 131094, 3, 0, 196630, 3, 0, 262166, 3, 0, 327702, 3, 0, 393238, 3, 0, 458774, 3, 0, -655382, 3, 0, -589846, 3, 0, -524310, 3, 0, -458774, 3, 0, -393238, 3, 0, -327702, 3, 0, -262166, 3, 0, -196630, 3, 0, -131094, 3, 0, -65558, 3, 0, -655381, 3, 0, -589845, 3, 0, -524309, 3, 0, -458773, 3, 0, -393237, 3, 0, -327701, 3, 0, -262165, 3, 0, -196629, 3, 0, -131093, 3, 0, -65557, 3, 0, -655380, 3, 0, -589844, 3, 0, -524308, 3, 0, -458772, 3, 0, -393236, 3, 0, -327700, 3, 0, -262164, 3, 0, -196628, 3, 0, -131092, 3, 0, -65556, 3, 0, -655379, 3, 0, -589843, 3, 0, -524307, 3, 0, -458771, 3, 0, -393235, 3, 0, -327699, 3, 0, -262163, 3, 0, -196627, 3, 0, -131091, 3, 0, -65555, 3, 0, -655378, 3, 0, -589842, 3, 0, -524306, 3, 0, -458770, 3, 0, -393234, 3, 0, -327698, 3, 0, -262162, 3, 0, -196626, 3, 0, -131090, 3, 0, -65554, 3, 0, -655377, 3, 0, -589841, 3, 0, -524305, 3, 0, -458769, 3, 0, -393233, 3, 0, -327697, 3, 0, -262161, 3, 0, -196625, 3, 0, -131089, 3, 0, -65553, 3, 0, -655376, 3, 0, -589840, 3, 0, -524304, 3, 0, -458768, 3, 0, -393232, 3, 0, -327696, 3, 0, -262160, 3, 0, -196624, 3, 0, -131088, 3, 0, -65552, 3, 0, -655375, 3, 0, -589839, 3, 0, -524303, 3, 0, -458767, 3, 0, -393231, 3, 0, -327695, 3, 0, -262159, 3, 0, -196623, 3, 0, -131087, 3, 0, -65551, 3, 0, -655374, 3, 0, -589838, 3, 0, -524302, 3, 0, -458766, 3, 0, -393230, 3, 0, -327694, 3, 0, -262158, 3, 0, -196622, 3, 0, -131086, 3, 0, -65550, 3, 0, -655373, 3, 0, -589837, 3, 0, -524301, 3, 0, -458765, 3, 0, -393229, 3, 0, -327693, 3, 0, -262157, 3, 0, -196621, 3, 0, -131085, 3, 0, -65549, 3, 0, -655372, 3, 0, -589836, 3, 0, -524300, 3, 0, -458764, 3, 0, -393228, 3, 0, -327692, 3, 0, -262156, 3, 0, -196620, 3, 0, -131084, 3, 0, -65548, 3, 0, -655371, 3, 0, -589835, 3, 0, -524299, 3, 0, -458763, 3, 0, -393227, 3, 0, -327691, 3, 0, -262155, 3, 0, -196619, 3, 0, -131083, 3, 0, -65547, 3, 0, -655370, 3, 0, -589834, 3, 0, -524298, 3, 0, -458762, 3, 0, -393226, 3, 0, -327690, 3, 0, -262154, 3, 0, -196618, 3, 0, -131082, 3, 0, -65546, 3, 0, -655369, 3, 0, -589833, 3, 0, -524297, 3, 0, -458761, 3, 0, -393225, 3, 0, -327689, 3, 0, -262153, 3, 0, -196617, 3, 0, -131081, 3, 0, -65545, 3, 0, -655368, 3, 0, -589832, 3, 0, -524296, 3, 0, -458760, 3, 0, -393224, 3, 0, -327688, 3, 0, -262152, 3, 0, -196616, 3, 0, -131080, 3, 0, -65544, 3, 0, -655367, 3, 0, -589831, 3, 0, -524295, 3, 0, -458759, 3, 0, -393223, 3, 0, -327687, 3, 0, -262151, 3, 0, -196615, 3, 0, -131079, 3, 0, -65543, 3, 0, -655366, 3, 0, -589830, 3, 0, -524294, 3, 0, -458758, 3, 0, -393222, 3, 0, -327686, 3, 0, -262150, 3, 0, -196614, 3, 0, -131078, 3, 0, -65542, 3, 0, -655365, 3, 0, -589829, 3, 0, -524293, 3, 0, -458757, 3, 0, -393221, 3, 0, -327685, 3, 0, -262149, 3, 0, -196613, 3, 0, -131077, 3, 0, -65541, 3, 0, -655364, 3, 0, -589828, 3, 0, -524292, 3, 0, -458756, 3, 0, -393220, 3, 0, -327684, 3, 0, -262148, 3, 0, -196612, 3, 0, -131076, 3, 0, -65540, 3, 0, -655363, 3, 0, -589827, 3, 0, -524291, 3, 0, -458755, 3, 0, -393219, 3, 0, -327683, 3, 0, -262147, 3, 0, -196611, 3, 0, -131075, 3, 0, -65539, 3, 0, -655362, 3, 0, -589826, 3, 0, -524290, 3, 0, -458754, 3, 0, -393218, 3, 0, -327682, 3, 0, -262146, 3, 0, -196610, 3, 0, -131074, 3, 0, -65538, 3, 0, -655361, 6, 0, -589825, 3, 0, -524289, 3, 0, -458753, 3, 0, -393217, 3, 0, -327681, 3, 0, -262145, 3, 0, -196609, 3, 0, -131073, 3, 0, -65537, 3, 0, -720896, 3, 0, -655360, 3, 0, -589824, 3, 0, -524288, 3, 0, -458752, 3, 0, -393216, 3, 0, -327680, 3, 0, -262144, 3, 0, -196608, 3, 0, -131072, 3, 0, -720895, 3, 0, -655359, 3, 0, -589823, 3, 0, -524287, 3, 0, -458751, 3, 0, -393215, 3, 0, -327679, 3, 0, -262143, 3, 0, -196607, 3, 0, -131071, 3, 0, -720894, 3, 0, -655358, 3, 0, -589822, 3, 0, -524286, 3, 0, -458750, 3, 0, -393214, 3, 0, -327678, 3, 0, -262142, 3, 0, -196606, 3, 0, -131070, 3, 0, -720893, 3, 0, -655357, 3, 0, -589821, 3, 0, -524285, 3, 0, -458749, 3, 0, -393213, 3, 0, -327677, 3, 0, -262141, 3, 0, -196605, 3, 0, -131069, 3, 0, -720892, 3, 0, -655356, 3, 0, -589820, 3, 0, -524284, 3, 0, -458748, 3, 0, -393212, 3, 0, -327676, 3, 0, -262140, 3, 0, -196604, 3, 0, -131068, 3, 0, -720891, 3, 0, -655355, 3, 0, -589819, 3, 0, -524283, 3, 0, -458747, 3, 0, -393211, 3, 0, -327675, 3, 0, -262139, 3, 0, -196603, 3, 0, -131067, 3, 0, -720890, 3, 0, -655354, 3, 0, -589818, 3, 0, -524282, 3, 0, -458746, 3, 0, -393210, 3, 0, -327674, 3, 0, -262138, 3, 0, -196602, 3, 0, -131066, 3, 0, -720889, 3, 0, -655353, 3, 0, -589817, 3, 0, -524281, 3, 0, -458745, 3, 0, -393209, 3, 0, -327673, 3, 0, -262137, 3, 0, -196601, 3, 0, -131065, 3, 0, -720888, 3, 0, -655352, 3, 0, -589816, 3, 0, -524280, 3, 0, -458744, 3, 0, -393208, 3, 0, -327672, 3, 0, -262136, 3, 0, -196600, 3, 0, -131064, 3, 0, -720887, 3, 0, -655351, 3, 0, -589815, 3, 0, -524279, 3, 0, -458743, 3, 0, -393207, 3, 0, -327671, 3, 0, -262135, 3, 0, -196599, 3, 0, -131063, 3, 0, -720886, 3, 0, -655350, 3, 0, -589814, 3, 0, -524278, 3, 0, -458742, 3, 0, -393206, 3, 0, -327670, 3, 0, -262134, 3, 0, -196598, 3, 0, -131062, 3, 0, -720885, 3, 0, -655349, 3, 0, -589813, 3, 0, -524277, 3, 0, -458741, 3, 0, -393205, 3, 0, -327669, 3, 0, -262133, 3, 0, -196597, 3, 0, -131061, 3, 0, -720884, 3, 0, -655348, 3, 0, -589812, 3, 0, -524276, 3, 0, -458740, 3, 0, -393204, 3, 0, -327668, 3, 0, -262132, 3, 0, -196596, 3, 0, -131060, 3, 0, -720883, 3, 0, -655347, 3, 0, -589811, 3, 0, -524275, 3, 0, -458739, 3, 0, -393203, 3, 0, -327667, 3, 0, -262131, 3, 0, -196595, 3, 0, -131059, 3, 0, -720882, 3, 0, -655346, 3, 0, -589810, 3, 0, -524274, 3, 0, -458738, 3, 0, -393202, 3, 0, -327666, 3, 0, -262130, 3, 0, -196594, 3, 0, -131058, 3, 0, -720881, 3, 0, -655345, 3, 0, -589809, 3, 0, -524273, 3, 0, -458737, 3, 0, -393201, 3, 0, -327665, 3, 0, -262129, 3, 0, -196593, 3, 0, -131057, 3, 0, -720880, 3, 0, -655344, 3, 0, -589808, 3, 0, -524272, 3, 0, -458736, 3, 0, -393200, 3, 0, -327664, 3, 0, -262128, 3, 0, -196592, 3, 0, -131056, 3, 0, -720879, 3, 0, -655343, 3, 0, -589807, 3, 0, -524271, 3, 0, -458735, 3, 0, -393199, 3, 0, -327663, 3, 0, -262127, 3, 0, -196591, 3, 0, -131055, 3, 0, -720878, 3, 0, -655342, 3, 0, -589806, 3, 0, -524270, 3, 0, -458734, 3, 0, -393198, 3, 0, -327662, 3, 0, -262126, 3, 0, -196590, 3, 0, -131054, 3, 0, -720877, 3, 0, -655341, 3, 0, -589805, 3, 0, -524269, 3, 0, -458733, 3, 0, -393197, 3, 0, -327661, 3, 0, -262125, 3, 0, -196589, 3, 0, -131053, 3, 0, -720876, 3, 0, -655340, 3, 0, -589804, 3, 0, -524268, 3, 0, -458732, 3, 0, -393196, 3, 0, -327660, 3, 0, -262124, 3, 0, -196588, 3, 0, -131052, 3, 0, -720875, 3, 0, -655339, 3, 0, -589803, 3, 0, -524267, 3, 0, -458731, 3, 0, -393195, 3, 0, -327659, 3, 0, -262123, 3, 0, -196587, 3, 0, -131051, 3, 0, -720874, 3, 0, -655338, 3, 0, -589802, 3, 0, -524266, 3, 0, -458730, 3, 0, -393194, 3, 0, -327658, 3, 0, -262122, 3, 0, -196586, 3, 0, -131050, 3, 0, 196607, 3, 0, 262143, 3, 0, 327679, 3, 0, 393215, 3, 0, 458751, 3, 0, 524287, 3, 0, 131072, 3, 0, 196608, 3, 0, 262144, 3, 0, 327680, 3, 0, 393216, 3, 0, 458752, 3, 0, 131073, 3, 0, 196609, 3, 0, 262145, 3, 0, 327681, 3, 0, 393217, 3, 0, 458753, 3, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(17, 16)
sprite_frames = SubResource("SpriteFrames_ijwqv")
frame_progress = 0.906251
script = SubResource("GDScript_uqym8")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-17, 15)
motion_mode = 1
script = ExtResource("13_diexu")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("14_5h3gn")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_fjw3k")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="WeaponInHand" type="Sprite2D" parent="Player"]
script = SubResource("GDScript_rj4es")

[node name="ItemScanner" type="Area2D" parent="Player"]
scale = Vector2(1.00131, 1)
collision_layer = 0
collision_mask = 2
script = SubResource("GDScript_3qysm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/ItemScanner"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_fjw3k")
metadata/_edit_lock_ = true

[node name="HurtBox" type="Area2D" parent="Player"]
collision_layer = 4
collision_mask = 0
script = ExtResource("17_px7d3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/HurtBox"]
shape = SubResource("RectangleShape2D_hmy2a")

[node name="GroundItem" type="Area2D" parent="."]
scale = Vector2(0.997177, 0.993877)
collision_layer = 2
collision_mask = 0
script = SubResource("GDScript_q71f5")
weapon = ExtResource("14_1m8u4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundItem"]
shape = SubResource("RectangleShape2D_ma3kf")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="GroundItem"]
texture = ExtResource("16_1uaj8")
script = SubResource("GDScript_g0yly")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(17, 26)
collision_layer = 0
collision_mask = 4
script = ExtResource("17_e58rm")
weapon = ExtResource("14_1m8u4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_cb5ct")

[connection signal="changed_weapon" from="Player" to="Player/WeaponInHand" method="_on_player_changed_weapon"]
[connection signal="area_entered" from="Player/ItemScanner" to="Player" method="_on_item_scanner_area_entered"]
[connection signal="got_hit" from="Player/HurtBox" to="Player" method="_on_hurt_box_got_hit"]
[connection signal="changed_weapon" from="GroundItem" to="GroundItem/Sprite2D" method="_on_ground_item_changed_weapon"]
[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_area_entered"]
